Update to add Riding in the Rain.

--- a/output/tags.html
+++ b/output/tags.html
@@ -17,8 +17,12 @@
 <section id="content" class="body">
     <h1>Tags for Unbound Nomad</h1>
     <ul>
-        <li><a href="/tag/lifestyle.html">Lifestyle</a> (1)</li>
-        <li><a href="/tag/motorcycles.html">Motorcycles</a> (1)</li>
+        <li><a href="/tag/gear.html">Gear</a> (1)</li>
+        <li><a href="/tag/lifestyle.html">Lifestyle</a> (2)</li>
+        <li><a href="/tag/motorcycles.html">Motorcycles</a> (2)</li>
+        <li><a href="/tag/rain.html">Rain</a> (1)</li>
+        <li><a href="/tag/riding.html">Riding</a> (1)</li>
+        <li><a href="/tag/skill.html">Skill</a> (1)</li>
     </ul>
 </section>
 
