--- a/output/archives.html
+++ b/output/archives.html
@@ -17,6 +17,8 @@
 <h1>Archives for Unbound Nomad</h1>
 
 <dl>
+    <dt>Sun 19 March 2023</dt>
+    <dd><a href="/stay-safe-ride-hard.html">Stay Safe and Prepared: 10 Tips for Riding Your Motorcycle in the Rain</a></dd>
     <dt>Wed 19 August 2020</dt>
     <dd><a href="/unbound-nomad.html">Unbound Nomad</a></dd>
 </dl>
