revamping the site.

--- a/output/tags.html
+++ b/output/tags.html
@@ -2,24 +2,28 @@
 <html lang="english">
 <head>
         <meta charset="utf-8" />
-        <title>Unbound Nomad - Tags</title>
+        <title>The Unbound Nomad - Tags</title>
         <link rel="stylesheet" href="/theme/css/main.css" />
-        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Unbound Nomad Atom Feed" />
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">Unbound Nomad </a></h1>
+                <h1><a href="/">The Unbound Nomad </a></h1>
                 <nav><ul>
+                    <li><a href="/pages/unbound-nomad.html">Unbound Nomad</a></li>
                     <li><a href="/category/blog.html">Blog</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
-    <h1>Tags for Unbound Nomad</h1>
+    <h1>Tags for The Unbound Nomad</h1>
     <ul>
+        <li><a href="/tag/gear.html">Gear</a> (1)</li>
         <li><a href="/tag/lifestyle.html">Lifestyle</a> (1)</li>
         <li><a href="/tag/motorcycles.html">Motorcycles</a> (1)</li>
+        <li><a href="/tag/rain.html">Rain</a> (1)</li>
+        <li><a href="/tag/riding.html">Riding</a> (1)</li>
+        <li><a href="/tag/skill.html">Skill</a> (1)</li>
     </ul>
 </section>
 
@@ -36,7 +40,6 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="#">You can add links in your config file</a></li>
                             <li><a href="#">Another social link</a></li>
