--- a/output/archives.html
+++ b/output/archives.html
@@ -2,24 +2,24 @@
 <html lang="english">
 <head>
         <meta charset="utf-8" />
-        <title>Unbound Nomad</title>
+        <title>The Unbound Nomad</title>
         <link rel="stylesheet" href="/theme/css/main.css" />
-        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Unbound Nomad Atom Feed" />
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">Unbound Nomad </a></h1>
+                <h1><a href="/">The Unbound Nomad </a></h1>
                 <nav><ul>
+                    <li><a href="/pages/unbound-nomad.html">Unbound Nomad</a></li>
                     <li><a href="/category/blog.html">Blog</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
-<h1>Archives for Unbound Nomad</h1>
+<h1>Archives for The Unbound Nomad</h1>
 
 <dl>
-    <dt>Wed 19 August 2020</dt>
-    <dd><a href="/unbound-nomad.html">Unbound Nomad</a></dd>
+    <dt>Sun 19 March 2023</dt>
+    <dd><a href="/stay-safe-ride-hard.html">Stay Safe and Prepared: 10 Tips for Riding Your Motorcycle in the Rain</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
@@ -35,7 +35,6 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="#">You can add links in your config file</a></li>
                             <li><a href="#">Another social link</a></li>
