--- a/output/authors.html
+++ b/output/authors.html
@@ -2,21 +2,21 @@
 <html lang="english">
 <head>
         <meta charset="utf-8" />
-        <title>Unbound Nomad - Authors</title>
+        <title>The Unbound Nomad - Authors</title>
         <link rel="stylesheet" href="/theme/css/main.css" />
-        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Unbound Nomad Atom Feed" />
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">Unbound Nomad </a></h1>
+                <h1><a href="/">The Unbound Nomad </a></h1>
                 <nav><ul>
+                    <li><a href="/pages/unbound-nomad.html">Unbound Nomad</a></li>
                     <li><a href="/category/blog.html">Blog</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
-    <h1>Authors on Unbound Nomad</h1>
+    <h1>Authors on The Unbound Nomad</h1>
     <ul>
         <li><a href="/author/unbound-nomad.html">Unbound Nomad</a> (1)</li>
     </ul>
@@ -35,7 +35,6 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="#">You can add links in your config file</a></li>
                             <li><a href="#">Another social link</a></li>
