--- a/archives.html
+++ b/archives.html
@@ -2,25 +2,24 @@
 <html lang="english">
 <head>
         <meta charset="utf-8" />
-        <title>Unbound Nomad</title>
+        <title>The Unbound Nomad</title>
         <link rel="stylesheet" href="/theme/css/main.css" />
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">Unbound Nomad </a></h1>
+                <h1><a href="/">The Unbound Nomad </a></h1>
                 <nav><ul>
+                    <li><a href="/pages/unbound-nomad.html">Unbound Nomad</a></li>
                     <li><a href="/category/blog.html">Blog</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
-<h1>Archives for Unbound Nomad</h1>
+<h1>Archives for The Unbound Nomad</h1>
 
 <dl>
     <dt>Sun 19 March 2023</dt>
     <dd><a href="/stay-safe-ride-hard.html">Stay Safe and Prepared: 10 Tips for Riding Your Motorcycle in the Rain</a></dd>
-    <dt>Wed 19 August 2020</dt>
-    <dd><a href="/unbound-nomad.html">Unbound Nomad</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
@@ -37,7 +36,8 @@
                         <h2>social</h2>
                         <ul>
 
-                            <li><a href="https://www.instagram.com/unbound_nomad/">Instagram (@unbound_nomad)</a></li>
+                            <li><a href="#">You can add links in your config file</a></li>
+                            <li><a href="#">Another social link</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
