--- a/authors.html
+++ b/authors.html
@@ -2,21 +2,26 @@
 <html lang="english">
 <head>
         <meta charset="utf-8" />
-        <title>Unbound Nomad - Categories</title>
+        <title>The Unbound Nomad - Authors</title>
         <link rel="stylesheet" href="/theme/css/main.css" />
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">Unbound Nomad </a></h1>
+                <h1><a href="/">The Unbound Nomad </a></h1>
                 <nav><ul>
+                    <li><a href="/pages/unbound-nomad.html">Unbound Nomad</a></li>
                     <li><a href="/category/blog.html">Blog</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
-    <h1>Categories on Unbound Nomad</h1>
+
+<section id="content" class="body">
+    <h1>Authors on The Unbound Nomad</h1>
     <ul>
-        <li><a href="/category/blog.html">Blog</a> (2)</li>
+        <li><a href="/author/unbound-nomad.html">Unbound Nomad</a> (1)</li>
     </ul>
+</section>
+
         <section id="extras" class="body">
                 <div class="blogroll">
                         <h2>links</h2>
@@ -31,7 +36,8 @@
                         <h2>social</h2>
                         <ul>
 
-                            <li><a href="https://www.instagram.com/unbound_nomad/">Instagram (@unbound_nomad)</a></li>
+                            <li><a href="#">You can add links in your config file</a></li>
+                            <li><a href="#">Another social link</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
