--- a/tags.html
+++ b/tags.html
@@ -2,22 +2,28 @@
 <html lang="english">
 <head>
         <meta charset="utf-8" />
-        <title>Unbound Nomad - Authors</title>
+        <title>The Unbound Nomad - Tags</title>
         <link rel="stylesheet" href="/theme/css/main.css" />
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">Unbound Nomad </a></h1>
+                <h1><a href="/">The Unbound Nomad </a></h1>
                 <nav><ul>
+                    <li><a href="/pages/unbound-nomad.html">Unbound Nomad</a></li>
                     <li><a href="/category/blog.html">Blog</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
-    <h1>Authors on Unbound Nomad</h1>
+    <h1>Tags for The Unbound Nomad</h1>
     <ul>
-        <li><a href="/author/unbound-nomad.html">Unbound Nomad</a> (2)</li>
+        <li><a href="/tag/gear.html">Gear</a> (1)</li>
+        <li><a href="/tag/lifestyle.html">Lifestyle</a> (1)</li>
+        <li><a href="/tag/motorcycles.html">Motorcycles</a> (1)</li>
+        <li><a href="/tag/rain.html">Rain</a> (1)</li>
+        <li><a href="/tag/riding.html">Riding</a> (1)</li>
+        <li><a href="/tag/skill.html">Skill</a> (1)</li>
     </ul>
 </section>
 
@@ -35,7 +41,8 @@
                         <h2>social</h2>
                         <ul>
 
-                            <li><a href="https://www.instagram.com/unbound_nomad/">Instagram (@unbound_nomad)</a></li>
+                            <li><a href="#">You can add links in your config file</a></li>
+                            <li><a href="#">Another social link</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
