--- a/archives.html
+++ b/archives.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="english">
+<html lang="en">
 <head>
         <meta charset="utf-8" />
         <title>The Unbound Nomad</title>
@@ -10,34 +10,41 @@
         <header id="banner" class="body">
                 <h1><a href="/">The Unbound Nomad </a></h1>
                 <nav><ul>
-                    <li><a href="/pages/unbound-nomad.html">Unbound Nomad</a></li>
+                    <li><a href="/pages/about-me.html">About Me</a></li>
+                    <li><a href="/pages/contact.html">Contact</a></li>
+                    <li><a href="/pages/the-route.html">The Route</a></li>
                     <li><a href="/category/blog.html">Blog</a></li>
+                    <li><a href="/category/garage.html">Garage</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
 <h1>Archives for The Unbound Nomad</h1>
 
 <dl>
-    <dt>Sun 19 March 2023</dt>
-    <dd><a href="/stay-safe-ride-hard.html">Stay Safe and Prepared: 10 Tips for Riding Your Motorcycle in the Rain</a></dd>
+    <dt>Sun 30 April 2023</dt>
+    <dd><a href="/blog-post.html">Welcome!</a></dd>
+    <dt>Sun 30 April 2023</dt>
+    <dd><a href="/lozen.html">Lozen - Mistress of the Road</a></dd>
+    <dt>Sun 30 April 2023</dt>
+    <dd><a href="/suzy.html">Suzy the Suzuki</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
                 <div class="blogroll">
                         <h2>links</h2>
                         <ul>
+                            <li><a href="http://localhost:8000/newsletter.html">Subscribe to the Newsletter!</a></li>
+                            <li><a href="http://localhost:8000/pages/my-friends.html">My Friends</a></li>
                             <li><a href="http://getpelican.com/">Pelican</a></li>
                             <li><a href="http://python.org/">Python.org</a></li>
-                            <li><a href="http://jinja.pocoo.org/">Jinja2</a></li>
-                            <li><a href="#">You can modify those links in your config file</a></li>
                         </ul>
                 </div><!-- /.blogroll -->
                 <div class="social">
                         <h2>social</h2>
                         <ul>
 
-                            <li><a href="#">You can add links in your config file</a></li>
-                            <li><a href="#">Another social link</a></li>
+                            <li><a href="https://www.instagram.com/unbound_nomad/">Instagram</a></li>
+                            <li><a href="https://twitter.com/unbound_nomad">Twitter</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
