--- a/categories.html
+++ b/categories.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="english">
+<html lang="en">
 <head>
         <meta charset="utf-8" />
         <title>The Unbound Nomad - Categories</title>
@@ -10,30 +10,34 @@
         <header id="banner" class="body">
                 <h1><a href="/">The Unbound Nomad </a></h1>
                 <nav><ul>
-                    <li><a href="/pages/unbound-nomad.html">Unbound Nomad</a></li>
+                    <li><a href="/pages/about-me.html">About Me</a></li>
+                    <li><a href="/pages/contact.html">Contact</a></li>
+                    <li><a href="/pages/the-route.html">The Route</a></li>
                     <li><a href="/category/blog.html">Blog</a></li>
+                    <li><a href="/category/garage.html">Garage</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
     <h1>Categories on The Unbound Nomad</h1>
     <ul>
         <li><a href="/category/blog.html">Blog</a> (1)</li>
+        <li><a href="/category/garage.html">Garage</a> (2)</li>
     </ul>
         <section id="extras" class="body">
                 <div class="blogroll">
                         <h2>links</h2>
                         <ul>
+                            <li><a href="http://localhost:8000/newsletter.html">Subscribe to the Newsletter!</a></li>
+                            <li><a href="http://localhost:8000/pages/my-friends.html">My Friends</a></li>
                             <li><a href="http://getpelican.com/">Pelican</a></li>
                             <li><a href="http://python.org/">Python.org</a></li>
-                            <li><a href="http://jinja.pocoo.org/">Jinja2</a></li>
-                            <li><a href="#">You can modify those links in your config file</a></li>
                         </ul>
                 </div><!-- /.blogroll -->
                 <div class="social">
                         <h2>social</h2>
                         <ul>
 
-                            <li><a href="#">You can add links in your config file</a></li>
-                            <li><a href="#">Another social link</a></li>
+                            <li><a href="https://www.instagram.com/unbound_nomad/">Instagram</a></li>
+                            <li><a href="https://twitter.com/unbound_nomad">Twitter</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
