--- a/pages/home.html
+++ b/pages/home.html
@@ -10,8 +10,13 @@
         <header id="banner" class="body">
                 <h1><a href="/">The Unbound Nomad </a></h1>
                 <nav><ul>
-                    <li><a href="/pages/about-me.html">Learn More!</a></li>
-                    <li class="active"><a href="/pages/unbound-nomad.html">Home</a></li>
+                    <li><a href="/pages/about-me.html">About Me</a></li>
+                    <li><a href="/pages/contact.html">Contact</a></li>
+                    <li><a href="/pages/my-friends.html">My Friends</a></li>
+                    <li class="active"><a href="/pages/home.html">Home</a></li>
+                    <li><a href="/pages/the-bike.html">The Bike</a></li>
+                    <li><a href="/pages/newsletter.html">Newsletter</a></li>
+                    <li><a href="/pages/the-route.html">The Route</a></li>
                     <li><a href="/category/blog.html">Blog</a></li>
                     <li><a href="/category/python.html">Python</a></li>
                 </ul></nav>
@@ -36,8 +41,8 @@
                         <h2>social</h2>
                         <ul>
 
-                            <li><a href="#">You can add links in your config file</a></li>
-                            <li><a href="#">Another social link</a></li>
+                            <li><a href="https://www.instagram.com/unbound_nomad/">Instagram</a></li>
+                            <li><a href="https://twitter.com/unbound_nomad">Twitter</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
