--- a/archives.html
+++ b/archives.html
@@ -3,18 +3,18 @@
 <head>
         <meta charset="utf-8" />
         <title>The Unbound Nomad</title>
-        <link rel="stylesheet" href="/theme/css/main.css" />
+        <link rel="stylesheet" href="./theme/css/main.css" />
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">The Unbound Nomad </a></h1>
+                <h1><a href="./">The Unbound Nomad </a></h1>
                 <nav><ul>
-                    <li><a href="/pages/about-me.html">About Me</a></li>
-                    <li><a href="/pages/contact.html">Contact</a></li>
-                    <li><a href="/pages/the-route.html">The Route</a></li>
-                    <li><a href="/category/blog.html">Blog</a></li>
-                    <li><a href="/category/garage.html">Garage</a></li>
+                    <li><a href="./pages/about-me.html">About Me</a></li>
+                    <li><a href="./pages/contact.html">Contact</a></li>
+                    <li><a href="./pages/the-route.html">The Route</a></li>
+                    <li><a href="./category/blog.html">Blog</a></li>
+                    <li><a href="./category/garage.html">Garage</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
@@ -22,11 +22,11 @@
 
 <dl>
     <dt>Sun 30 April 2023</dt>
-    <dd><a href="/blog-post.html">Welcome!</a></dd>
+    <dd><a href="./blog-post.html">Welcome!</a></dd>
     <dt>Sun 30 April 2023</dt>
-    <dd><a href="/lozen.html">Lozen - Mistress of the Road</a></dd>
+    <dd><a href="./lozen.html">Lozen - Mistress of the Road</a></dd>
     <dt>Sun 30 April 2023</dt>
-    <dd><a href="/suzy.html">Suzy the Suzuki</a></dd>
+    <dd><a href="./suzy.html">Suzy the Suzuki</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
