--- a/categories.html
+++ b/categories.html
@@ -3,24 +3,24 @@
 <head>
         <meta charset="utf-8" />
         <title>The Unbound Nomad - Categories</title>
-        <link rel="stylesheet" href="/theme/css/main.css" />
+        <link rel="stylesheet" href="./theme/css/main.css" />
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">The Unbound Nomad </a></h1>
+                <h1><a href="./">The Unbound Nomad </a></h1>
                 <nav><ul>
-                    <li><a href="/pages/about-me.html">About Me</a></li>
-                    <li><a href="/pages/contact.html">Contact</a></li>
-                    <li><a href="/pages/the-route.html">The Route</a></li>
-                    <li><a href="/category/blog.html">Blog</a></li>
-                    <li><a href="/category/garage.html">Garage</a></li>
+                    <li><a href="./pages/about-me.html">About Me</a></li>
+                    <li><a href="./pages/contact.html">Contact</a></li>
+                    <li><a href="./pages/the-route.html">The Route</a></li>
+                    <li><a href="./category/blog.html">Blog</a></li>
+                    <li><a href="./category/garage.html">Garage</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
     <h1>Categories on The Unbound Nomad</h1>
     <ul>
-        <li><a href="/category/blog.html">Blog</a> (1)</li>
-        <li><a href="/category/garage.html">Garage</a> (2)</li>
+        <li><a href="./category/blog.html">Blog</a> (1)</li>
+        <li><a href="./category/garage.html">Garage</a> (2)</li>
     </ul>
         <section id="extras" class="body">
                 <div class="blogroll">
