--- a/tags.html
+++ b/tags.html
@@ -3,18 +3,18 @@
 <head>
         <meta charset="utf-8" />
         <title>The Unbound Nomad - Tags</title>
-        <link rel="stylesheet" href="/theme/css/main.css" />
+        <link rel="stylesheet" href="./theme/css/main.css" />
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">The Unbound Nomad </a></h1>
+                <h1><a href="./">The Unbound Nomad </a></h1>
                 <nav><ul>
-                    <li><a href="/pages/about-me.html">About Me</a></li>
-                    <li><a href="/pages/contact.html">Contact</a></li>
-                    <li><a href="/pages/the-route.html">The Route</a></li>
-                    <li><a href="/category/blog.html">Blog</a></li>
-                    <li><a href="/category/garage.html">Garage</a></li>
+                    <li><a href="./pages/about-me.html">About Me</a></li>
+                    <li><a href="./pages/contact.html">Contact</a></li>
+                    <li><a href="./pages/the-route.html">The Route</a></li>
+                    <li><a href="./category/blog.html">Blog</a></li>
+                    <li><a href="./category/garage.html">Garage</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
