Fixing mixed content
Making sure all links are SSL.

--- a/introduction.html
+++ b/introduction.html
@@ -39,7 +39,7 @@
 <p>In <a href="./category/blog.html">Blog</a>.</p>
 <p>tags: <a href="./tag/motorcycles.html">Motorcycles</a> <a href="./tag/lifestyle.html">Lifestyle</a> <a href="./tag/riding.html">Riding</a> <a href="./tag/intro.html">Intro</a> </p>
 </footer><!-- /.post-info -->      <p align="center">
-  <img src="http://unboundnomad.com/images/myPic.jpg">
+  <img src="https://unboundnomad.com/images/myPic.jpg">
 </p>
 
 <p>Hey there, fellow adventurers! My name is Phil, but you can call me the Unbound Nomad. I'm a motorcycle rider, a travel enthusiast, and a guy who loves to explore the world. I started the Unbound Nomad brand because I wanted to share my love for travel with all of you and help you make the most out of your adventures.</p>
