--- a/categories.html
+++ b/categories.html
@@ -70,7 +70,13 @@
             <li>
               <a target="_self"
                  href="./pages/contact.html#contact">
-                Contact
+                Contact Us
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="./pages/privacy-policy.html#privacy-policy">
+                Privacy Policy
               </a>
             </li>
             <li>
@@ -94,10 +100,17 @@
 
     <ul class="social">
       <li>
-        <a class="sc-facebook (@unbound_nomad)"
+        <a class="sc-youtube"
+           href="https://www.youtube.com/channel/UCvAAwLc11f4EUAAhSuLK5pw"
+           target="_blank">
+          <i class="fa-brands fa-youtube"></i>
+        </a>
+      </li>
+      <li>
+        <a class="sc-facebook"
            href="https://www.facebook.com/profile.php?id=61554818544356"
            target="_blank">
-          <i class="fa-brands fa-facebook (@unbound_nomad)"></i>
+          <i class="fa-brands fa-facebook"></i>
         </a>
       </li>
       <li>
@@ -128,7 +141,7 @@
   <div>
     <ul class="list">
       <li>
-        <a href="./category/blog.html">Blog</a> (17)
+        <a href="./category/blog.html">Blog</a> (18)
       </li>
     </ul>
   </div>
