--- a/index2.html
+++ b/index2.html
@@ -70,7 +70,13 @@
             <li>
               <a target="_self"
                  href="./pages/contact.html#contact">
-                Contact
+                Contact Us
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="./pages/privacy-policy.html#privacy-policy">
+                Privacy Policy
               </a>
             </li>
             <li>
@@ -94,10 +100,17 @@
 
     <ul class="social">
       <li>
-        <a class="sc-facebook (@unbound_nomad)"
+        <a class="sc-youtube"
+           href="https://www.youtube.com/channel/UCvAAwLc11f4EUAAhSuLK5pw"
+           target="_blank">
+          <i class="fa-brands fa-youtube"></i>
+        </a>
+      </li>
+      <li>
+        <a class="sc-facebook"
            href="https://www.facebook.com/profile.php?id=61554818544356"
            target="_blank">
-          <i class="fa-brands fa-facebook (@unbound_nomad)"></i>
+          <i class="fa-brands fa-facebook"></i>
         </a>
       </li>
       <li>
@@ -123,6 +136,47 @@
 
 
 
+<article>
+  <header>
+    <h2><a href="./native-american-scenic-byway-tour.html#native-american-scenic-byway-tour">Native American Scenic Byway Tour</a></h2>
+    <p>
+      Posted on Sat 13 January 2024 in <a href="./category/blog.html">Blog</a>
+
+          &#8226; Tagged with
+              <a href="./tag/motorcycles.html">Motorcycles</a>,              <a href="./tag/lifestyle.html">Lifestyle</a>
+    </p>
+  </header>
+  <div>
+      <div><table>
+<thead>
+<tr>
+<th style="text-align: center;">Distance</th>
+<th style="text-align: center;">:</th>
+<th style="text-align: left;">Ride Time</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align: center;">741 miles</td>
+<td style="text-align: center;">:</td>
+<td style="text-align: left;">12 hours</td>
+</tr>
+<tr>
+<td style="text-align: center;"><br></td>
+<td style="text-align: center;"></td>
+<td style="text-align: left;"></td>
+</tr>
+</tbody>
+</table>
+<div style="text-align: justify">Follow the rugged, underdeveloped terrain of the Native American Scenic Byway and experience great views of diverse landscapes and the Missouri River. The route runs north and south through central South Dakota, allowing you to travel through Yankton, Crow Creek, Cheyenne River and …</div></div>
+        <br>
+        <a class="btn"
+           href="./native-american-scenic-byway-tour.html#native-american-scenic-byway-tour">
+          Continue reading
+        </a>
+  </div>
+  <hr />
+</article>
 <article>
   <header>
     <h2><a href="./badlands-tour.html#badlands-tour">Badlands Tour</a></h2>
