--- a/tags.html
+++ b/tags.html
@@ -70,7 +70,13 @@
             <li>
               <a target="_self"
                  href="./pages/contact.html#contact">
-                Contact
+                Contact Us
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="./pages/privacy-policy.html#privacy-policy">
+                Privacy Policy
               </a>
             </li>
             <li>
@@ -94,10 +100,17 @@
 
     <ul class="social">
       <li>
-        <a class="sc-facebook (@unbound_nomad)"
+        <a class="sc-youtube"
+           href="https://www.youtube.com/channel/UCvAAwLc11f4EUAAhSuLK5pw"
+           target="_blank">
+          <i class="fa-brands fa-youtube"></i>
+        </a>
+      </li>
+      <li>
+        <a class="sc-facebook"
            href="https://www.facebook.com/profile.php?id=61554818544356"
            target="_blank">
-          <i class="fa-brands fa-facebook (@unbound_nomad)"></i>
+          <i class="fa-brands fa-facebook"></i>
         </a>
       </li>
       <li>
@@ -129,6 +142,7 @@
     <ul class="list">          <li><a href="./tag/gear.html">Gear</a> (1)</li>
           <li><a href="./tag/lifestyle.html">Lifestyle</a> (17)</li>
           <li><a href="./tag/motorcycles.html">Motorcycles</a> (17)</li>
+          <li><a href="./tag/privacy.html">Privacy</a> (1)</li>
           <li><a href="./tag/rain.html">Rain</a> (1)</li>
           <li><a href="./tag/riding.html">Riding</a> (1)</li>
           <li><a href="./tag/skill.html">Skill</a> (1)</li>
