--- a/impressum.html
+++ b/impressum.html
@@ -31,25 +31,24 @@
  
 
 <meta name="author" content="Unbound Nomad" />
-<meta name="description" content="Distance : Ride Time 156 miles : 3.25 hours Traveling from Sturgis to Devils Tower and back, this route takes you from a great area in South Dakota to a great area in Wyoming. The route is full of long sweeping curves that take you through diverse scenery including mountains, meadows …" />
-<meta name="keywords" content="Motorcycles, Lifestyle">
+<meta name="description" content="The Unbound Nomad Contact: - Email: unboundnomad@unboundnomad.com Legal Representative: Phil Grimes Disclaimer: This Impressum serves as a legal notice in accordance with applicable laws. The information provided here is for informational purposes only. While we strive to keep the information up to date and accurate, we make no representations …" />
+<meta name="keywords" content="Privacy">
 
 
   <meta property="og:site_name" content="The Unbound Nomad"/>
-  <meta property="og:title" content="Devil&#39;s Tower Tour"/>
-  <meta property="og:description" content="Distance : Ride Time 156 miles : 3.25 hours Traveling from Sturgis to Devils Tower and back, this route takes you from a great area in South Dakota to a great area in Wyoming. The route is full of long sweeping curves that take you through diverse scenery including mountains, meadows …"/>
+  <meta property="og:title" content="Impressum"/>
+  <meta property="og:description" content="The Unbound Nomad Contact: - Email: unboundnomad@unboundnomad.com Legal Representative: Phil Grimes Disclaimer: This Impressum serves as a legal notice in accordance with applicable laws. The information provided here is for informational purposes only. While we strive to keep the information up to date and accurate, we make no representations …"/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content="./devils-tower-tour.html"/>
+  <meta property="og:url" content="./impressum.html"/>
   <meta property="og:type" content="article"/>
-  <meta property="article:published_time" content="2024-01-13 20:55:00+00:00"/>
+  <meta property="article:published_time" content="2024-01-21 10:40:00+00:00"/>
   <meta property="article:modified_time" content=""/>
   <meta property="article:author" content="./author/unbound-nomad.html">
   <meta property="article:section" content="Blog"/>
-  <meta property="article:tag" content="Motorcycles"/>
-  <meta property="article:tag" content="Lifestyle"/>
+  <meta property="article:tag" content="Privacy"/>
   <meta property="og:image" content="">
 
-  <title>The Unbound Nomad &ndash; Devil&#39;s Tower Tour</title>
+  <title>The Unbound Nomad &ndash; Impressum</title>
 
 
 </head>
@@ -147,42 +146,34 @@
 <article class="single">
   <header>
       
-    <h1 id="devils-tower-tour">Devil's Tower Tour</h1>
+    <h1 id="impressum">Impressum</h1>
     <p>
-      Posted on Sat 13 January 2024 in <a href="./category/blog.html">Blog</a>
+      Posted on Sun 21 January 2024 in <a href="./category/blog.html">Blog</a>
 
     </p>
   </header>
 
 
   <div>
-    <table>
-<thead>
-<tr>
-<th style="text-align: center;">Distance</th>
-<th style="text-align: center;">:</th>
-<th style="text-align: left;">Ride Time</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td style="text-align: center;">156 miles</td>
-<td style="text-align: center;">:</td>
-<td style="text-align: left;">3.25 hours</td>
-</tr>
-<tr>
-<td style="text-align: center;"><br></td>
-<td style="text-align: center;"></td>
-<td style="text-align: left;"></td>
-</tr>
-</tbody>
-</table>
-<div style="text-align: justify">Traveling from Sturgis to Devils Tower and back, this route takes you from a great area in South Dakota to a great area in Wyoming. The route is full of long sweeping curves that take you through diverse scenery including mountains, meadows and Devils Tower National Monument. The wide open roads are in good condition with gradual climbs and turns.</div>
+    <p>The Unbound Nomad</p>
+<p><strong>Contact:</strong>
+- <strong>Email:</strong> unboundnomad@unboundnomad.com</p>
+<p><strong>Legal Representative:</strong>
+Phil Grimes</p>
+<p><strong>Disclaimer:</strong>
+This Impressum serves as a legal notice in accordance with applicable laws. The information provided here is for informational purposes only. While we strive to keep the information up to date and accurate, we make no representations or warranties of any kind, express or implied, about the completeness, accuracy, reliability, suitability, or availability with respect to the website or the information contained on it.</p>
+<p><strong>Responsible for Content:</strong>
+Phil Grimes</p>
+<p><strong>Copyright:</strong>
+The content and works provided on this website are subject to copyright law. Unauthorized use, reproduction, or distribution of copyrighted material is prohibited without the written permission of the copyright owner.</p>
+<p><strong>External Links:</strong>
+This website may contain links to external websites. We are not responsible for the content of external sites. The operators of linked sites are solely responsible for their content.</p>
+<p><strong>Data Protection:</strong>
+For information on how we handle your personal data, please refer to our Privacy Policy.</p>
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="./tag/motorcycles.html">Motorcycles</a>
-      <a href="./tag/lifestyle.html">Lifestyle</a>
+      <a href="./tag/privacy.html">Privacy</a>
     </p>
   </div>
 
