--- a/pages/contact.html
+++ b/pages/contact.html
@@ -41,7 +41,7 @@
 
 
 
-  <title>The Unbound Nomad &ndash; Contact</title>
+  <title>The Unbound Nomad &ndash; Contact Us</title>
 
 
 </head>
@@ -72,7 +72,13 @@
             <li>
               <a target="_self"
                  href="../pages/contact.html#contact">
-                Contact
+                Contact Us
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="../pages/privacy-policy.html#privacy-policy">
+                Privacy Policy
               </a>
             </li>
             <li>
@@ -96,10 +102,17 @@
 
     <ul class="social">
       <li>
-        <a class="sc-facebook (@unbound_nomad)"
+        <a class="sc-youtube"
+           href="https://www.youtube.com/channel/UCvAAwLc11f4EUAAhSuLK5pw"
+           target="_blank">
+          <i class="fa-brands fa-youtube"></i>
+        </a>
+      </li>
+      <li>
+        <a class="sc-facebook"
            href="https://www.facebook.com/profile.php?id=61554818544356"
            target="_blank">
-          <i class="fa-brands fa-facebook (@unbound_nomad)"></i>
+          <i class="fa-brands fa-facebook"></i>
         </a>
       </li>
       <li>
@@ -126,10 +139,9 @@
 <article class="single">
   <header>
     
-    <h1 id="contact">Contact</h1>
+    <h1 id="contact">Contact Us</h1>
   </header>
   <div>
-<h1>Contact Us</h1>
 <p>Welcome to our contact page! We're excited to hear from you. If you have any questions, suggestions, or just want to say hello, feel free to reach out through the following channels:</p>
 <ul>
 <li>
