--- a/pages/impressum.html
+++ b/pages/impressum.html
@@ -30,26 +30,18 @@
 
  
 
-<meta name="author" content="Unbound Nomad" />
-<meta name="description" content="Distance : Ride Time 55 miles : 80 minutes Welcome to the showcase of the Front Range. Less than an hour from Denver, Boulder, or Fort Collins, this 55-mile-long route provides matchless views of the Continental Divide and its timbered approaches. The string of popular attractions along the way - Rocky Mountain National …" />
-<meta name="keywords" content="Motorcycles, Lifestyle">
-
-
+    <meta name="author" content="The Unbound Nomad" />
+    <meta name="description" content="" />
   <meta property="og:site_name" content="The Unbound Nomad"/>
-  <meta property="og:title" content="Peak to Peak Scenic Byway"/>
-  <meta property="og:description" content="Distance : Ride Time 55 miles : 80 minutes Welcome to the showcase of the Front Range. Less than an hour from Denver, Boulder, or Fort Collins, this 55-mile-long route provides matchless views of the Continental Divide and its timbered approaches. The string of popular attractions along the way - Rocky Mountain National …"/>
+  <meta property="og:type" content="blog"/>
+  <meta property="og:title" content="The Unbound Nomad"/>
+  <meta property="og:description" content=""/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content="../drafts/peak-to-peak-scenic-byway.html"/>
-  <meta property="og:type" content="article"/>
-  <meta property="article:published_time" content="2024-01-13 20:08:00+00:00"/>
-  <meta property="article:modified_time" content=""/>
-  <meta property="article:author" content="../author/unbound-nomad.html">
-  <meta property="article:section" content="Blog"/>
-  <meta property="article:tag" content="Motorcycles"/>
-  <meta property="article:tag" content="Lifestyle"/>
-  <meta property="og:image" content="">
+  <meta property="og:url" content=".."/>
 
-  <title>The Unbound Nomad &ndash; Peak to Peak Scenic Byway</title>
+
+
+  <title>The Unbound Nomad &ndash; Impressum</title>
 
 
 </head>
@@ -80,13 +72,13 @@
             <li>
               <a target="_self"
                  href="../pages/contact.html#contact">
-                Contact Us
+                Contact
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="../pages/privacy-policy.html#privacy-policy">
-                Privacy Policy
+                 href="../pages/impressum.html#impressum">
+                Impressum
               </a>
             </li>
             <li>
@@ -146,51 +138,25 @@
 
 <article class="single">
   <header>
-      
-    <h1 id="peak-to-peak-scenic-byway">Peak to Peak Scenic Byway</h1>
-    <p>
-      Posted on Sat 13 January 2024 in <a href="../category/blog.html">Blog</a>
-
-    </p>
+    
+    <h1 id="impressum">Impressum</h1>
   </header>
-
-
   <div>
-    <table>
-<thead>
-<tr>
-<th style="text-align: center;">Distance</th>
-<th style="text-align: center;">:</th>
-<th style="text-align: left;">Ride Time</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td style="text-align: center;">55 miles</td>
-<td style="text-align: center;">:</td>
-<td style="text-align: left;">80 minutes</td>
-</tr>
-<tr>
-<td style="text-align: center;"><br></td>
-<td style="text-align: center;"></td>
-<td style="text-align: left;"></td>
-</tr>
-</tbody>
-</table>
-<div style="text-align: justify">Welcome to the showcase of the Front Range. Less than an hour from Denver, Boulder, or Fort Collins, this 55-mile-long route provides matchless views of the Continental Divide and its timbered approaches. The string of popular attractions along the way - Rocky Mountain National Park, Golden Gate Canyon State Park, Arapaho and Roosevelt National Forests, the Indian Peaks Wilderness Area, Eldora Ski Resort - combine recreation with nature preservation. The gravel roads criss-crossing the main highway lead to high-country lakes, trailheads, campgrounds, the Moffat Tunnel's east portal, and ghost towns at Hesse and Apex. Established in 1918 this is Colorado's oldest scenic byway.</div>
-  </div>
-  <div class="tag-cloud">
-    <p>
-      <a href="../tag/motorcycles.html">Motorcycles</a>
-      <a href="../tag/lifestyle.html">Lifestyle</a>
-    </p>
-  </div>
-
-
-
-
-
-
+<p>The Unbound Nomad</p>
+<p><strong>Contact:</strong>
+- <strong>Email:</strong> unboundnomad@unboundnomad.com</p>
+<p><strong>Legal Representative:</strong>
+Phil Grimes</p>
+<p><strong>Disclaimer:</strong>
+This Impressum serves as a legal notice in accordance with applicable laws. The information provided here is for informational purposes only. While we strive to keep the information up to date and accurate, we make no representations or warranties of any kind, express or implied, about the completeness, accuracy, reliability, suitability, or availability with respect to the website or the information contained on it.</p>
+<p><strong>Responsible for Content:</strong>
+Phil Grimes</p>
+<p><strong>Copyright:</strong>
+The content and works provided on this website are subject to copyright law. Unauthorized use, reproduction, or distribution of copyrighted material is prohibited without the written permission of the copyright owner.</p>
+<p><strong>External Links:</strong>
+This website may contain links to external websites. We are not responsible for the content of external sites. The operators of linked sites are solely responsible for their content.</p>
+<p><strong>Data Protection:</strong>
+For information on how we handle your personal data, please refer to our Privacy Policy.</p>  </div>
 </article>
 
 <footer>
