--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -30,26 +30,18 @@
 
  
 
-<meta name="author" content="Unbound Nomad" />
-<meta name="description" content="Distance : Ride Time 55 miles : 80 minutes Welcome to the showcase of the Front Range. Less than an hour from Denver, Boulder, or Fort Collins, this 55-mile-long route provides matchless views of the Continental Divide and its timbered approaches. The string of popular attractions along the way - Rocky Mountain National …" />
-<meta name="keywords" content="Motorcycles, Lifestyle">
-
-
+    <meta name="author" content="The Unbound Nomad" />
+    <meta name="description" content="" />
   <meta property="og:site_name" content="The Unbound Nomad"/>
-  <meta property="og:title" content="Peak to Peak Scenic Byway"/>
-  <meta property="og:description" content="Distance : Ride Time 55 miles : 80 minutes Welcome to the showcase of the Front Range. Less than an hour from Denver, Boulder, or Fort Collins, this 55-mile-long route provides matchless views of the Continental Divide and its timbered approaches. The string of popular attractions along the way - Rocky Mountain National …"/>
+  <meta property="og:type" content="blog"/>
+  <meta property="og:title" content="The Unbound Nomad"/>
+  <meta property="og:description" content=""/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content="../drafts/peak-to-peak-scenic-byway.html"/>
-  <meta property="og:type" content="article"/>
-  <meta property="article:published_time" content="2024-01-13 20:08:00+00:00"/>
-  <meta property="article:modified_time" content=""/>
-  <meta property="article:author" content="../author/unbound-nomad.html">
-  <meta property="article:section" content="Blog"/>
-  <meta property="article:tag" content="Motorcycles"/>
-  <meta property="article:tag" content="Lifestyle"/>
-  <meta property="og:image" content="">
+  <meta property="og:url" content=".."/>
 
-  <title>The Unbound Nomad &ndash; Peak to Peak Scenic Byway</title>
+
+
+  <title>The Unbound Nomad &ndash; Privacy Policy</title>
 
 
 </head>
@@ -146,51 +138,41 @@
 
 <article class="single">
   <header>
-      
-    <h1 id="peak-to-peak-scenic-byway">Peak to Peak Scenic Byway</h1>
-    <p>
-      Posted on Sat 13 January 2024 in <a href="../category/blog.html">Blog</a>
-
-    </p>
+    
+    <h1 id="privacy-policy">Privacy Policy</h1>
   </header>
-
-
   <div>
-    <table>
-<thead>
-<tr>
-<th style="text-align: center;">Distance</th>
-<th style="text-align: center;">:</th>
-<th style="text-align: left;">Ride Time</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td style="text-align: center;">55 miles</td>
-<td style="text-align: center;">:</td>
-<td style="text-align: left;">80 minutes</td>
-</tr>
-<tr>
-<td style="text-align: center;"><br></td>
-<td style="text-align: center;"></td>
-<td style="text-align: left;"></td>
-</tr>
-</tbody>
-</table>
-<div style="text-align: justify">Welcome to the showcase of the Front Range. Less than an hour from Denver, Boulder, or Fort Collins, this 55-mile-long route provides matchless views of the Continental Divide and its timbered approaches. The string of popular attractions along the way - Rocky Mountain National Park, Golden Gate Canyon State Park, Arapaho and Roosevelt National Forests, the Indian Peaks Wilderness Area, Eldora Ski Resort - combine recreation with nature preservation. The gravel roads criss-crossing the main highway lead to high-country lakes, trailheads, campgrounds, the Moffat Tunnel's east portal, and ghost towns at Hesse and Apex. Established in 1918 this is Colorado's oldest scenic byway.</div>
-  </div>
-  <div class="tag-cloud">
-    <p>
-      <a href="../tag/motorcycles.html">Motorcycles</a>
-      <a href="../tag/lifestyle.html">Lifestyle</a>
-    </p>
-  </div>
-
-
-
-
-
-
+<p>Last updated: 1/21/2024</p>
+<p>Welcome toThe Unbound Nomad! This Privacy Policy is designed to help you understand how we collect, use, and safeguard your personal information.</p>
+<h2>Information We Collect</h2>
+<h3>Personal Information</h3>
+<ul>
+<li>When you visit our website, we may collect personally identifiable information, such as your name, email address, and any other information you voluntarily provide.</li>
+</ul>
+<h3>Usage Data</h3>
+<ul>
+<li>We may also collect information about how you access and use our website. This may include your IP address, browser type, device information, and usage patterns.</li>
+</ul>
+<h2>How We Use Your Information</h2>
+<ul>
+<li>Provide, operate, and maintain our website.</li>
+<li>Improve, personalize, and expand our website's offerings.</li>
+<li>Understand and analyze how you use our website.</li>
+<li>Respond to your comments, inquiries, and requests.</li>
+</ul>
+<h2>Sharing Your Information</h2>
+<p>We do not sell, trade, or otherwise transfer your personal information to third parties. However, we may share aggregated, non-personal information for analytics and reporting purposes.</p>
+<h2>Cookies</h2>
+<p>We use cookies to enhance your experience on our website. You can control cookies through your browser settings. Please note that disabling cookies may affect the functionality of certain features on our site.</p>
+<h2>Security</h2>
+<p>We take reasonable measures to protect your personal information. However, no method of transmission over the internet or electronic storage is completely secure. Therefore, we cannot guarantee absolute security.</p>
+<h2>Links to Other Websites</h2>
+<p>Our website may contain links to third-party websites. We have no control over the content or privacy practices of these sites and encourage you to review their privacy policies.</p>
+<h2>Changes to This Privacy Policy</h2>
+<p>We may update our Privacy Policy from time to time. Any changes will be posted on this page with the updated date.</p>
+<h2>Contact Us</h2>
+<p>If you have any questions about this Privacy Policy, please contact us at unboundnomad@unboundnomad.com.</p>
+<p>By using our website, you consent to the terms outlined in this Privacy Policy.</p>  </div>
 </article>
 
 <footer>
