--- a/stay-safe-ride-hard.html
+++ b/stay-safe-ride-hard.html
@@ -84,7 +84,13 @@
             <li>
               <a target="_self"
                  href="./pages/contact.html#contact">
-                Contact
+                Contact Us
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="./pages/privacy-policy.html#privacy-policy">
+                Privacy Policy
               </a>
             </li>
             <li>
@@ -108,10 +114,17 @@
 
     <ul class="social">
       <li>
-        <a class="sc-facebook (@unbound_nomad)"
+        <a class="sc-youtube"
+           href="https://www.youtube.com/channel/UCvAAwLc11f4EUAAhSuLK5pw"
+           target="_blank">
+          <i class="fa-brands fa-youtube"></i>
+        </a>
+      </li>
+      <li>
+        <a class="sc-facebook"
            href="https://www.facebook.com/profile.php?id=61554818544356"
            target="_blank">
-          <i class="fa-brands fa-facebook (@unbound_nomad)"></i>
+          <i class="fa-brands fa-facebook"></i>
         </a>
       </li>
       <li>
