Added booking links
Added booking button to all ride pages.

--- a/devils-tower-tour.html
+++ b/devils-tower-tour.html
@@ -31,13 +31,13 @@
  
 
 <meta name="author" content="Unbound Nomad" />
-<meta name="description" content="Distance : Ride Time 156 miles : 3.25 hours Traveling from Sturgis to Devils Tower and back, this route takes you from a great area in South Dakota to a great area in Wyoming. The route is full of long sweeping curves that take you through diverse scenery including mountains, meadows …" />
+<meta name="description" content="|Distance|:|Ride Time| | | :------: |:| :------------- | :------: || | 156 miles|:|3.25 hours| Traveling from Sturgis to Devils Tower and back, this route takes you from a great area in South Dakota to a great area in Wyoming. The route is full of long sweeping curves that take you through diverse scenery including mountains, meadows …" />
 <meta name="keywords" content="Motorcycles, Lifestyle, Adventure, Tours">
 
 
   <meta property="og:site_name" content="The Unbound Nomad"/>
   <meta property="og:title" content="Devil&#39;s Tower Tour"/>
-  <meta property="og:description" content="Distance : Ride Time 156 miles : 3.25 hours Traveling from Sturgis to Devils Tower and back, this route takes you from a great area in South Dakota to a great area in Wyoming. The route is full of long sweeping curves that take you through diverse scenery including mountains, meadows …"/>
+  <meta property="og:description" content="|Distance|:|Ride Time| | | :------: |:| :------------- | :------: || | 156 miles|:|3.25 hours| Traveling from Sturgis to Devils Tower and back, this route takes you from a great area in South Dakota to a great area in Wyoming. The route is full of long sweeping curves that take you through diverse scenery including mountains, meadows …"/>
   <meta property="og:locale" content="en_US"/>
   <meta property="og:url" content="./devils-tower-tour.html"/>
   <meta property="og:type" content="article"/>
@@ -158,27 +158,10 @@
 
 
   <div>
-    <table>
-<thead>
-<tr>
-<th style="text-align: center;">Distance</th>
-<th style="text-align: center;">:</th>
-<th style="text-align: left;">Ride Time</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td style="text-align: center;">156 miles</td>
-<td style="text-align: center;">:</td>
-<td style="text-align: left;">3.25 hours</td>
-</tr>
-<tr>
-<td style="text-align: center;"><br></td>
-<td style="text-align: center;"></td>
-<td style="text-align: left;"></td>
-</tr>
-</tbody>
-</table>
+    <p>|Distance|:|Ride Time| |
+| :------: |:| :------------- | :------: |<FORM><INPUT TYPE="button" VALUE="Book Today!" onClick="parent.location='mailto:unboundnomad@unboundnomad.com?subject=Booking Request: Devil's Tower Tour'"></FORM>|
+| 156 miles|:|3.25 hours|
+<br></p>
 <div style="text-align: justify">Traveling from Sturgis to Devils Tower and back, this route takes you from a great area in South Dakota to a great area in Wyoming. The route is full of long sweeping curves that take you through diverse scenery including mountains, meadows and Devils Tower National Monument. The wide open roads are in good condition with gradual climbs and turns.</div>
 <p><img alt="Devil's Tower" height="531" src="./images/devilsTower.png" style="display: block; margin: 0 auto" width="500"> </p>
   </div>
