--- a/drafts/marblehead-and-put-in-bay.html
+++ b/drafts/marblehead-and-put-in-bay.html
@@ -162,6 +162,7 @@
 <th style="text-align: center;">Distance</th>
 <th style="text-align: center;">:</th>
 <th style="text-align: left;">Ride Time</th>
+<th style="text-align: center;"></th>
 </tr>
 </thead>
 <tbody>
@@ -169,11 +170,13 @@
 <td style="text-align: center;">202 miles</td>
 <td style="text-align: center;">:</td>
 <td style="text-align: left;">6 hours</td>
+<td style="text-align: center;"><FORM><INPUT TYPE="button" VALUE="Book Today!" onClick="parent.location='mailto:unboundnomad@unboundnomad.com?subject=Booking Request: Marblehead & Put-in-Bay'"></FORM></td>
 </tr>
 <tr>
 <td style="text-align: center;"><br></td>
 <td style="text-align: center;"></td>
 <td style="text-align: left;"></td>
+<td style="text-align: center;"></td>
 </tr>
 </tbody>
 </table>
