--- a/drafts/peak-to-peak-scenic-byway.html
+++ b/drafts/peak-to-peak-scenic-byway.html
@@ -162,6 +162,7 @@
 <th style="text-align: center;">Distance</th>
 <th style="text-align: center;">:</th>
 <th style="text-align: left;">Ride Time</th>
+<th style="text-align: center;"></th>
 </tr>
 </thead>
 <tbody>
@@ -169,11 +170,13 @@
 <td style="text-align: center;">55 miles</td>
 <td style="text-align: center;">:</td>
 <td style="text-align: left;">80 minutes</td>
+<td style="text-align: center;"><FORM><INPUT TYPE="button" VALUE="Book Today!" onClick="parent.location='mailto:unboundnomad@unboundnomad.com?subject=Booking Request: Peak to Peak Scenic Byway'"></FORM></td>
 </tr>
 <tr>
 <td style="text-align: center;"><br></td>
 <td style="text-align: center;"></td>
 <td style="text-align: left;"></td>
+<td style="text-align: center;"></td>
 </tr>
 </tbody>
 </table>
