--- a/ohios-windy-9-tour.html
+++ b/ohios-windy-9-tour.html
@@ -162,6 +162,7 @@
 <th style="text-align: center;">Distance</th>
 <th style="text-align: center;">:</th>
 <th style="text-align: left;">Ride Time</th>
+<th style="text-align: center;"></th>
 </tr>
 </thead>
 <tbody>
@@ -169,11 +170,13 @@
 <td style="text-align: center;">890 miles</td>
 <td style="text-align: center;">:</td>
 <td style="text-align: left;">25 hours</td>
+<td style="text-align: center;"><FORM><INPUT TYPE="button" VALUE="Book Today!" onClick="parent.location='mailto:unboundnomad@unboundnomad.com?subject=Booking Request: Ohio's Windy 9 Tour'"></FORM></td>
 </tr>
 <tr>
 <td style="text-align: center;"><br></td>
 <td style="text-align: center;"></td>
 <td style="text-align: left;"></td>
+<td style="text-align: center;"></td>
 </tr>
 </tbody>
 </table>
