--- a/sturgis-motorcycle-rally.html
+++ b/sturgis-motorcycle-rally.html
@@ -164,6 +164,7 @@
 <th style="text-align: center;">Length</th>
 <th style="text-align: center;">:</th>
 <th style="text-align: left;">Ride Time</th>
+<th style="text-align: center;"></th>
 </tr>
 </thead>
 <tbody>
@@ -171,11 +172,13 @@
 <td style="text-align: center;">10 days, plus round trip travel</td>
 <td style="text-align: center;">:</td>
 <td style="text-align: left;">VARIED</td>
+<td style="text-align: center;"><FORM><INPUT TYPE="button" VALUE="Book Today!" onClick="parent.location='mailto:unboundnomad@unboundnomad.com?subject=Booking Request: Sturgis Motorcycle Rally'"></FORM></td>
 </tr>
 <tr>
 <td style="text-align: center;"><br></td>
 <td style="text-align: center;"></td>
 <td style="text-align: left;"></td>
+<td style="text-align: center;"></td>
 </tr>
 </tbody>
 </table>
