--- a/tail-of-the-dragon-tour.html
+++ b/tail-of-the-dragon-tour.html
@@ -164,6 +164,7 @@
 <th style="text-align: center;">Distance</th>
 <th style="text-align: center;">:</th>
 <th style="text-align: left;">Ride Time</th>
+<th style="text-align: center;"></th>
 </tr>
 </thead>
 <tbody>
@@ -171,11 +172,13 @@
 <td style="text-align: center;">11 miles</td>
 <td style="text-align: center;">:</td>
 <td style="text-align: left;">25 minutes</td>
+<td style="text-align: center;"><FORM><INPUT TYPE="button" VALUE="Book Today!" onClick="parent.location='mailto:unboundnomad@unboundnomad.com?subject=Booking Request: Tail of the Dragon Tour'"></FORM></td>
 </tr>
 <tr>
 <td style="text-align: center;"><br></td>
 <td style="text-align: center;"></td>
 <td style="text-align: left;"></td>
+<td style="text-align: center;"></td>
 </tr>
 </tbody>
 </table>
